Update Page Funnel Visits for T-shirt company.ipynb

--- a/Page Funnel Visits for Cool T-Shirts Inc..ipynb
+++ b/Page Funnel Visits for Cool T-Shirts Inc..ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, we examine a page visits funnel for Cool T-Shirts Inc. to examine how many people complete a 4-step process:\n",
+    "In this project, we examine a page visits funnel for an online T-shirt company to examine how many people complete a 4-step process:\n",
     "<ol>1.  A user visits CoolTShirts.com</ol>\n",
     "<ol>2.  A user adds a t-shirt to their cart.</ol>\n",
     "<ol>3.  A user clicks \"checkout\".</ol>\n",
